--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+click==7.1.2
 cmake==3.18.4.post1
 dlib==19.21.1
-imutils==0.5.4
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 numpy==1.20.0
 opencv-python==4.5.1.48
-scipy==1.4.1
+Pillow==8.1.0
