--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 appdirs==1.4.4
-asyncpg==0.21.0
-black==20.8b1
+autopep8==1.5.5
+cffi==1.14.4
 click==7.1.2
 databases==0.4.0
 dnspython==2.0.0
@@ -12,9 +12,16 @@ idna==2.10
 motor==2.3.0
 mypy-extensions==0.4.3
 pathspec==0.8.0
+pycodestyle==2.6.0
+pycparser==2.20
 pydantic==1.7.2
+PyJWT==2.0.1
 pymongo==3.11.0
+python-decouple==3.4
+python-multipart==0.0.5
 regex==2020.10.28
+six==1.15.0
+SQLAlchemy==1.3.23
 starlette==0.13.6
 toml==0.10.2
 typed-ast==1.4.1
