--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.4
 autopep8==1.5.5
+bcrypt==3.2.0
 cffi==1.14.4
 click==7.1.2
 databases==0.4.0
@@ -11,6 +12,7 @@ h11==0.11.0
 idna==2.10
 motor==2.3.0
 mypy-extensions==0.4.3
+passlib==1.7.4
 pathspec==0.8.0
 pycodestyle==2.6.0
 pycparser==2.20
