--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,13 @@ toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 uvicorn==0.12.2
+cmake==3.18.4.post1
+dlib==19.21.1
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+numpy==1.20.1
+opencv-python==4.5.1.48
+Pillow==8.1.0
+imutils==0.5.4
+scipy==1.4.1
+
