--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,39 @@
+aioredis==1.3.1
+aiosmtplib==1.1.4
 appdirs==1.4.4
+async-timeout==3.0.1
 autopep8==1.5.5
 bcrypt==3.2.0
+blinker==1.4
+certifi==2020.12.5
 cffi==1.14.4
 click==7.1.2
+cmake==3.18.4.post1
 databases==0.4.0
+dlib==19.21.1
 dnspython==2.0.0
 email-validator==1.1.1
-fastapi==0.61.1
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+fakeredis==1.4.5
+fastapi==0.63.0
+fastapi-mail==0.3.4.2
 gunicorn==20.0.4
 h11==0.11.0
+hiredis==1.1.0
+httpcore==0.12.3
+httpx==0.16.1
 idna==2.10
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+mongoengine==0.22.1
 motor==2.3.0
 mypy-extensions==0.4.3
+numpy==1.20.1
+opencv-python==4.5.1.48
 passlib==1.7.4
 pathspec==0.8.0
+Pillow==8.1.0
 pycodestyle==2.6.0
 pycparser==2.20
 pydantic==1.7.2
@@ -21,21 +41,15 @@ PyJWT==2.0.1
 pymongo==3.11.0
 python-decouple==3.4
 python-multipart==0.0.5
+redis==3.5.3
 regex==2020.10.28
+rfc3986==1.4.0
 six==1.15.0
+sniffio==1.2.0
+sortedcontainers==2.3.0
 SQLAlchemy==1.3.23
 starlette==0.13.6
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 uvicorn==0.12.2
-cmake==3.18.4.post1
-dlib==19.21.1
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-numpy==1.20.1
-opencv-python==4.5.1.48
-Pillow==8.1.0
-imutils==0.5.4
-scipy==1.4.1
-
