--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   dio: ^3.0.10
   http: ^0.12.2
   shared_preferences: ^0.5.12+4
-  # mapbox_gl: ^0.9.0
-  # camera: ^0.7.0+2
-  # path_provider: ^1.6.27
-  # path: ^1.7.0\
+  camera: ^0.5.8+2
+  esys_flutter_share: ^1.0.2
+  path: ^1.6.4
+  path_provider: ^1.6.11
 
 dev_dependencies:
   flutter_test:
