--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   esys_flutter_share: ^1.0.2
   path: ^1.6.4
   path_provider: ^1.6.11
-
+  mapbox_gl: ^0.8.0
+  flutter_bloc: ^6.0.6
+  location: ^3.0.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,17 +53,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+    - assets/
+    
   fonts:
     - family: Montserrat
       fonts:
