--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pydantic==1.7.2
 PyJWT==2.0.1
 pymongo==3.11.0
 python-decouple==3.4
+python-dotenv==0.15.0
 python-multipart==0.0.5
 redis==3.5.3
 regex==2020.10.28
@@ -47,7 +48,6 @@ rfc3986==1.4.0
 six==1.15.0
 sniffio==1.2.0
 sortedcontainers==2.3.0
-SQLAlchemy==1.3.23
 starlette==0.13.6
 toml==0.10.2
 typed-ast==1.4.1
