--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.1
+  # cupertino_icons: ^1.0.1
   dio: ^3.0.10
   http: ^0.12.2
   shared_preferences: ^0.5.12+4
