--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ __pycache__
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
-.vscode
+.classpath
+.project
+.settings/
 
 
 ### OSX ###
