--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ hiredis==1.1.0
 httpcore==0.12.3
 httpx==0.16.1
 idna==2.10
+imutils==0.5.4
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 mongoengine==0.22.1
@@ -45,6 +46,7 @@ python-multipart==0.0.5
 redis==3.5.3
 regex==2020.10.28
 rfc3986==1.4.0
+scipy==1.6.1
 six==1.15.0
 sniffio==1.2.0
 sortedcontainers==2.3.0
