--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Drivably Admin App
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,29 +23,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  #cupertino_icons: ^1.0.1
-  dio: ^3.0.10
-  http: ^0.12.2
-  shared_preferences: ^0.5.12+4
   camera: ^0.5.8+2
+  dio: ^3.0.10
   esys_flutter_share: ^1.0.2
+  flutter_bloc: ^6.0.6
+  get: ^3.25.6
+  http: ^0.12.2
+  location: ^3.0.2
+  mapbox_gl: ^0.8.0
   path: ^1.6.4
   path_provider: ^1.6.11
-  mapbox_gl: ^0.8.0
-  flutter_bloc: ^6.0.6
-  location: ^3.0.2
-  
+  shared_preferences: ^0.5.12+4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # integration_test:
-  #   sdk: flutter
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -54,7 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    
+
   fonts:
     - family: Montserrat
       fonts:
