--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
     sdk: flutter
   # cupertino_icons: ^1.0.1
   dio: ^3.0.10
+  shared_preferences: ^0.5.12+4
+  path: ^1.6.4
+  path_provider: ^1.6.11
+  camera: ^0.5.8+2
 
 dev_dependencies:
   flutter_test:
