--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ bcrypt==3.2.0
 blinker==1.4
 certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
 cmake==3.18.4.post1
 databases==0.4.0
@@ -18,6 +19,7 @@ face-recognition-models==0.3.0
 fakeredis==1.4.5
 fastapi==0.63.0
 fastapi-mail==0.3.4.2
+greenlet==1.0.0
 gunicorn==20.0.4
 h11==0.11.0
 hiredis==1.1.0
@@ -25,6 +27,7 @@ httpcore==0.12.3
 httpx==0.16.1
 idna==2.10
 imutils==0.5.4
+ipapi==1.0.4
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 mongoengine==0.22.1
@@ -45,14 +48,17 @@ python-dotenv==0.15.0
 python-multipart==0.0.5
 redis==3.5.3
 regex==2020.10.28
+requests==2.25.1
 rfc3986==1.4.0
 scipy==1.6.1
 six==1.15.0
 sniffio==1.2.0
 sortedcontainers==2.3.0
+SQLAlchemy==1.4.7
 starlette==0.13.6
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+urllib3==1.26.4
 uuid==1.30
 uvicorn==0.12.2
