--- a/requirements.txt
+++ b/requirements.txt
@@ -41,8 +41,10 @@ Pillow==8.1.0
 pycodestyle==2.6.0
 pycparser==2.20
 pydantic==1.7.2
+pyFirmata==1.1.0
 PyJWT==2.0.1
 pymongo==3.11.0
+pyserial==3.5
 python-decouple==3.4
 python-dotenv==0.15.0
 python-multipart==0.0.5
